--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.4.5'
+        room_version = '2.5.1'
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
