--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,12 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3-android:1.2.0-alpha02'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation ("androidx.compose.material3:material3:1.1.1")
 
     //local data
     implementation "androidx.room:room-ktx:$room_version"
@@ -81,6 +84,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+    implementation("io.coil-kt:coil-compose:2.1.0")
 
     //di
     implementation 'com.google.dagger:hilt-android:2.44'
